tests/snapshots/raw__examples_in_informal_reference-110.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0o0581\")"
---
Ok(
    [
        Token {
            class: octal_integer,
            length: 6,
        },
    ],
)
