tests/snapshots/raw__examples_in_informal_reference-111.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"128_i8\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 4,
        },
        Token {
            class: identifier,
            length: 2,
        },
    ],
)
