tests/snapshots/raw__examples_in_informal_reference-114.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0b____\")"
---
Ok(
    [
        Token {
            class: binary_integer,
            length: 6,
        },
    ],
)
