tests/snapshots/raw__examples_in_informal_reference-117.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"0.1f32\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 1,
        },
        Token {
            class: dot,
            length: 1,
        },
        Token {
            class: decimal_integer,
            length: 1,
        },
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
