tests/snapshots/raw__examples_in_informal_reference-12.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"if\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 2,
        },
    ],
)
